fix account length overflow on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -376,6 +376,10 @@ screen and (max-width: 1100px) {
     display: none
   }
 
+  .tiny-mobile-ext {
+      font-size: 80%;
+    }
+
   .mobile-ext {
     display:block
   }
